estructurando index.html,poniendo navbar y banner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="nav-container">
+        <nav class="navbar">
+            <h1 class="navbar-logo">Shop</h1>
+            <h1 class="ver-carrito" id="verCarrito"><img src="./img/carritodecompra.png" alt=""></h1>
+        </nav>
+    </div>
+
+    <div class="banner">
+        <div class="banner-container">
+            <h1>ShechuCake's Shop</h1>
+            <p>El mejor lugar de compras Dulces</p>
+
+        </div>
+
+    </div>
     
 
 
