dando estilo al index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <div class="nav-container">
         <nav class="navbar">
-            <h1 class="navbar-logo">Shop</h1>
-            <h1 class="ver-carrito" id="verCarrito"><img src="./img/carritodecompra.png" alt=""></h1>
+            <h1 class="navbar-logo"><img src="./img/logo.png" width="35px" alt="">SheshuCake's</h1>
+            <h1 class="ver-carrito" id="verCarrito"><img src="./img/carritodecompra.png" alt="" width="35px"></h1>
         </nav>
     </div>
 
