--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <div class="banner-container">
             <h1>ShechuCake's Shop</h1>
             <p>El mejor lugar de compras Dulces</p>
-
         </div>
-
     </div>
+
+    <div id="shopContent" class="shop-content"></div>
     
 
 
