--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     </div>
 
     <div id="shopContent" class="shop-content"></div>
+
+    <div id="modal-container" class="modal-container"></div>
     
 
 
