--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="nav-container">
         <nav class="navbar">
             <h1 class="navbar-logo"><img src="./img/logo.png" width="35px" alt="">SheshuCake's</h1>
-            <h1 class="ver-carrito" id="verCarrito"><img src="./img/carritodecompra.png" alt="" width="35px"></h1>
+            <h1 class="ver-carrito" id="verCarrito"><img src="./img/carritodecompra.png" alt="" width="35px"><span id="cantidadCarrito" class="cantidad-carrito"></span></h1>
         </nav>
     </div>
 
